# ScoutPIDTuner

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
BO-results/: 2025-02-16-21-51-02_init_1_bo.csv  2025-02-16-21-54-38_init_1_bo.txt
BO-results/config_1/: 2025-02-16-19-52-18_init_0_bo.csv  2025-02-16-19-59-02_init_0_bo.txt  2025-02-16-20-30-38_init_1_bo.csv  2025-02-16-20-34-49_init_1_bo.txt
BO-results/config_2/: 2025-02-16-20-38-30_init_0_bo.csv  2025-02-16-20-45-10_init_0_bo.txt  2025-02-16-20-57-52_init_1_bo.csv  2025-02-16-21-06-37_init_1_bo.txt
BO-results/config_3/: 2025-02-16-21-08-58_init_0_bo.csv
DE-results/: 2025-02-12-17-04-09_init_0_de.csv
DE-results/config_1/: 2025-02-11-14-46-14_init_0_de.csv  2025-02-11-14-54-48_init_0_de.txt  2025-02-11-22-09-35_init_1_de.csv  2025-02-11-22-33-23_init_1_de.txt  2025-02-13-14-22-38_init_1_de.csv  2025-02-13-14-27-09_init_1_de.txt  2025-02-13-14-30-14_init_0_de.csv  2025-02-13-15-32-28_init_0_de.txt
DE-results/config_2/: 2025-02-13-16-38-05_init_0_de.csv  2025-02-13-17-05-47_init_0_de.txt  2025-02-13-18-01-02_init_1_de.csv  2025-02-13-18-24-44_init_1_de.txt
DE-results/config_3/: 2025-02-13-18-29-40_init_0_de.csv  2025-02-13-18-34-12_init_0_de.txt  (+2 more)
src/pid_tuning/: package.xml  setup.cfg  setup.py
src/pid_tuning/config/: tuner_config.yaml
src/pid_tuning/pid_tuning/: bo_optimizer.py  de_optimizer.py  experiment_node.py  init_states.json  launcher.py  pid_tuner.py  tester.py  tuner_configs.py  tuner_helpers.py  tuner_loader.py  tuner_settings.py  tuner_utils.py
