<package format="3">
  <name>pid_tuning</name>
  <version>0.0.1</version>
  <description>PID Tuning for Scout robot.</description>
  <maintainer email="abustami@umich.edu">Ali Albustami</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <!-- If you rely on bayes_opt from a pip install, that won't appear here,
       but you can note it in docs or handle it in a separate requirements.txt -->

  <export>
    <build_type>ament_python</build_type>
    <!-- <build_type>ament_cmake</build_type>  -->
  </export>
</package>
